--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a class="logo" href="">LOGO</a>
             <div class="nav-links" id="nav-links">
                 <ul>
-                    <li><a href="main.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="course.html">COURSE</a></li>
                     <li><a href="blog.html">BLOG</a></li>
